--- a/index.html
+++ b/index.html
@@ -8,7 +8,43 @@
 </head>
 <body>
     <section>
-        
+        <nav>
+            <img src="./assets/HTML Practise Assets/FES.svg" alt="">
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div>
+                <h1>Best place to learn frontend</h1>
+                <p>Go from being an absoulte beginner to a pro with a simpflifed process</p>
+                <button>Start now</button>
+            </div>
+            <figure>
+                <img src="./assets/HTML Practise Assets/laptop.png" alt="Home page image">
+            </figure>
+        </header>
     </section>
+
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
+                </p>
+            </div>
+            <figure>
+                <img src="./assets/HTML Practise Assets/about.jpg" alt="">
+            </figure>
+        </section>
+
+        <section id="discord"></section>
+        <h2>Discord</h2>
+        <section id="contact"></section>
+    </main>
 </body>
 </html>
