--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div>
                 <h1>Best place to learn frontend</h1>
-                <p>Go from being an absoulte beginner to a pro with a simpflifed process</p>
+                <p>Go from being an absoulte beginner to a pro with a simplified process</p>
                 <button>Start now</button>
             </div>
             <figure>
@@ -32,9 +32,11 @@
         <section id="about">
             <h2>About</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
                 </p>
             </div>
             <figure>
@@ -42,9 +44,39 @@
             </figure>
         </section>
 
-        <section id="discord"></section>
+        <section id="discord">
         <h2>Discord</h2>
-        <section id="contact"></section>
+        <figure>
+            <img src="./assets/HTML Practise Assets/discord.png" alt="Discord">
+        </figure>
+        <div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est ullam incidunt nostrum, sint aperiam fugiat sit suscipit quasi eius natus officiis id voluptatum officia cum at dignissimos laborum hic distinctio!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quasi? Autem quidem itaque fugiat excepturi eius non esse eaque aperiam tempora illum dolores nobis tenetur aliquid, recusandae suscipit a praesentium.
+            </p>
+        </div>
+        </section>
+    
+        <section id="contact">
+            <h2>Contact</h2>
+            <form action="">
+                <span>Email</span>
+                <input type="text" placeholder="jane@example.com">
+                <span>Message</span>
+                <textarea type="text" placeholder="jane@example.com"></textarea>
+            </form>
+        </section>
     </main>
+
+    <footer>
+        <img src="./assets/HTML Practise Assets/FES.svg" alt="">
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="">Courses</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+    </footer>
 </body>
 </html>
