--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <nav>
-            <img src="./assets/HTML Practise Assets/FES.svg" alt="">
+            <img src="./assets/HTML Practise Assets/FES.svg" class="logo" alt="">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#discord">Discord</a></li>
@@ -18,64 +18,78 @@
             </ul>
         </nav>
         <header>
-            <div>
-                <h1>Best place to learn frontend</h1>
-                <p>Go from being an absoulte beginner to a pro with a simplified process</p>
-                <button>Start now</button>
+         <div class="row">
+             <div>
+                  <h1>Best place to learn frontend</h1>
+                  <p class="subheader">Go from being an absoulte beginner to a pro with a simplified process</p>
+                 <button>Start now</button>
             </div>
             <figure>
-                <img src="./assets/HTML Practise Assets/laptop.png" alt="Home page image">
+                 <img src="./assets/HTML Practise Assets/laptop.png" alt="Home page image">
             </figure>
+            </div>
         </header>
     </section>
 
     <main>
         <section id="about">
             <h2>About</h2>
-            <div>
-                <p>
+            <div class="row">
+            <div class="section_description">
+                <div class="section__description--wrapper">
+                    <p class="section__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
-                </p>
-                <p>
+                    </p>
+                 <p class="section__description--para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus harum, dolorum ipsum earum quos quisquam eos necessitatibus laborum autem dignissimos enim odit aliquid pariatur! Totam necessitatibus reprehenderit non repudiandae illum!
-                </p>
+                    </p>
+                </div>
+                <figure class="about__img--wrapper">
+                    <img src="./assets/HTML Practise Assets/about.jpg" alt="">
+                </figure>
+             </div>
             </div>
-            <figure>
-                <img src="./assets/HTML Practise Assets/about.jpg" alt="">
-            </figure>
         </section>
 
         <section id="discord">
         <h2>Discord</h2>
-        <figure>
+        <div class="row">
+        <div class="section_description">
+        <figure class="about__img--wrapper">
             <img src="./assets/HTML Practise Assets/discord.png" alt="Discord">
         </figure>
-        <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est ullam incidunt nostrum, sint aperiam fugiat sit suscipit quasi eius natus officiis id voluptatum officia cum at dignissimos laborum hic distinctio!
+        <div class="section__description--wrapper">
+            <p class="section__description--para">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est ullam incidunt nostrum, sint aperiam fugiat sit suscipit quasi eius natus officiis id voluptatum officia cum at dignissimos laborum hic distinctio!
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quasi? Autem quidem itaque fugiat excepturi eius non esse eaque aperiam tempora illum dolores nobis tenetur aliquid, recusandae suscipit a praesentium.
+            <p class="section__description--para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quasi? Autem quidem itaque fugiat excepturi eius non esse eaque aperiam tempora illum dolores nobis tenetur aliquid, recusandae suscipit a praesentium.
             </p>
         </div>
+        </div>
+        </div>
+
         </section>
     
         <section id="contact">
             <h2>Contact</h2>
             <form action="">
                 <span>Email</span>
-                <input type="text" placeholder="jane@example.com">
+                <input type="email" placeholder="jane@example.com">
                 <span>Message</span>
-                <textarea type="text" placeholder="jane@example.com"></textarea>
+                <textarea type="text" placeholder="Cool website, lets get connected"></textarea>
+                <button>Contact Us</button>
             </form>
         </section>
     </main>
 
     <footer>
-        <img src="./assets/HTML Practise Assets/FES.svg" alt="">
-        <div>
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-            <a href="">Courses</a>
+        <img class="footer__logo" src="./assets/HTML Practise Assets/FES.svg" alt="">
+        <div class="footer__links">
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#discord">Discord</a>
+            <a class="footer__link" href="#contact">Contact</a>
+            <a class="footer__link" href="">Courses</a>
         </div>
         <p>Copyright Frontend Simplified</p>
     </footer>
